# Comparative-analysis-of-different-approaches

./: README.md  pyproject.toml
data/: global_coastal_points.parquet  label_encoder.pkl  metrics_all_models.json  processed_splits.npz  scaler.pkl
notebooks/: 01_build_global_dataset.ipynb  02_preprocess_and_split.ipynb  03_linear_baseline.ipynb  04_decision_tree.ipynb  05_mlp_1layer.ipynb  06_mlp_3layer.ipynb  07_transformer_light.ipynb  08_quantum_qiskit.ipynb  09_quantum_tfq.ipynb  10_compare_models.ipynb
src/: data_builder.py  helpers.py
