[project]
name = "comparative-analysis-of-different-approaches"
version = "0.1.0"
description = "Сравнение моделей классификации географических точек (курсовая)."
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "numpy>=1.24,<2.0",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "jupyter>=1.0",
    "ipykernel>=6.25",
    "geopandas>=0.14",
    "shapely>=2.0",
    "pyproj>=3.6",
    "requests>=2.31",
    "tensorflow>=2.14,<2.16",
    "tensorflow-quantum>=0.7.3",
    "qiskit>=1.0,<2.0",
    "qiskit-aer>=0.13",
    "qiskit-machine-learning>=0.7",
    "qiskit-algorithms>=0.3.0",
    "qiskit-aer-gpu>=0.15.1",
]
